got all messages and polls retrived
