# server/api/message/router.js
@@ -1,5 +1,7 @@
 const addMessage = require('./message');
+const getMessagesAndPollsByLectureId = require('./getMessagesAndPollsByLectureId');
 
 module.exports = {
     ...addMessage,
+    ...getMessagesAndPollsByLectureId
 }
